--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-        Linux kernel release 3.x <http://kernel.org/>
+   Kernel sources for ugg (redmi note 5 a prime). Working with nougat pie and Android Q (but no sound camera etc)  ROMs
+       
+       Linux kernel release 3.x <http://kernel.org/>
 
 These are the release notes for Linux version 3.  Read them carefully,
 as they tell you what this is all about, explain how to install the
